--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-12  Juri Linkov  <juri@jurta.org>
+
+	* info/dir: Move menu help lines from `* Menu:' to file header.
+	Describe the purpose of a red *.
+
 2004-05-04  Dave Love  <fx@gnu.org>
 
 	* configure.in: Don't use `extrasub'.
