--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-12  Juri Linkov  <juri@jurta.org>
+
+	* dired.texi (Operating on Files): Add dired-do-touch.
+
 2004-06-10  Kim F. Storm  <storm@cua.dk>
 
 	* pcl-cvs.texi (Viewing differences): Add 'd y'.
