--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-13  Andreas Schwab  <schwab@suse.de>
+
+	* xfaces.c (face_attr_equal_p): Declare parameters.
+
 2004-06-13  Kenichi Handa  <handa@m17n.org>
 
 	* ccl.c (CCL_READ_CHAR): If hit EOF, set REG to -1.
