--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-13  Kai Grossjohann  <kai.grossjohann@gmx.net>
+
+	* diff-mode.el (diff-current-defun): If at start of hunk, use
+	position of first change.
+
 2004-06-13  Lars Hansen  <larsh@math.ku.dk>
 
 	* dired-x.el (dired-mark-omitted): Bind to "*O".
