--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-14  Kenichi Handa  <handa@m17n.org>
+
+	* international/utf-8.el (ccl-encode-mule-utf-8): Fix previous
+	change.
+
 2004-06-13  Richard M. Stallman  <rms@gnu.org>
 
 	* textmodes/paragraphs.el (sentence-end): Add 0x5397d as close brace.
