*** empty log message ***

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-13  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* autotype.texi (Copyrights, Timestamps): Recommend
+	`before-save-hook' instead of `write-file-functions'.
+
 2004-06-13  Richard M. Stallman  <rms@gnu.org>
 
 	* custom.texi (Init Syntax): Explain about vars that do special
